--- a/SeeviceProvider-PL/appsettings.json
+++ b/SeeviceProvider-PL/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default Connection": "Server = . ; Database = Service Providers ; Integrated Security = SSPI ; Trust Serevr Certificate = True "
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
