finish all logic layer and Seed data

--- a/SeeviceProvider-PL/appsettings.json
+++ b/SeeviceProvider-PL/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default Connection": "Server = . ; Database = Service Providers ; Integrated Security = SSPI ; Trust Serevr Certificate = True "
+    "Default Connection": "Server =.; Database = Service Providers ; Integrated Security = SSPI ; Trust Server Certificate = True "
   },
   "Logging": {
     "LogLevel": {
