--- a/SeeviceProvider-PL/appsettings.json
+++ b/SeeviceProvider-PL/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "ServiceProviderApp",
+    "Audience": "ServiceProviderApp users",
+    "ExpireyMinutes": 30
+  }
 }
